# pqc-scan

./: .gitignore  .pqcscan.yml  CLAUDE.md  LICENSE  README.md  action.yml  pyproject.toml
.claude/skills/add-detection-rule/: SKILL.md
.claude/skills/add-language/: SKILL.md
.claude/skills/inspect-ast/: SKILL.md
.github/workflows/: ci.yml  example-usage.yml
src/pqcscan/: __init__.py  cli.py  config.py
src/pqcscan/languages/: _helpers.py  go_rules.py  java_rules.py  javascript_rules.py  python_rules.py
src/pqcscan/migration/: suggestions.py
src/pqcscan/output/: cbom.py  console.py  json_output.py  sarif.py
src/pqcscan/scanner/: ast_scanner.py  base.py  config_scanner.py  context.py  dependency_scanner.py  engine.py
src/pqcscan/utils/: file_walker.py  git.py
tests/: conftest.py  test_cli.py  test_config_scanner.py  test_context_hints.py  test_file_walker.py  test_go_scanner.py  test_java_scanner.py  test_javascript_scanner.py  test_output_cbom.py  test_output_sarif.py  test_python_scanner.py  test_robustness.py
tests/fixtures/configs/: safe_config.yml  vulnerable.yml  vulnerable_nginx.conf
tests/fixtures/dependencies/: package.json  requirements.txt
tests/fixtures/go/: vulnerable.go
tests/fixtures/java/: VulnerableCrypto.java
tests/fixtures/javascript/: vulnerable_jwt.js  vulnerable_node.js
tests/fixtures/python/: safe_code.py  vulnerable_ec.py  vulnerable_jwt.py  vulnerable_rsa.py  vulnerable_tls.py
