[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pqc-scan"
version = "0.1.0"
description = "Developer-native scanner for quantum-vulnerable cryptography"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "pqc-scan contributors" }]
keywords = [
  "post-quantum",
  "cryptography",
  "security",
  "static-analysis",
  "sarif",
  "cbom",
  "quantum",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Security :: Cryptography",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
  "tree-sitter>=0.23.0",
  "tree-sitter-python>=0.23.0",
  "tree-sitter-javascript>=0.23.0",
  "tree-sitter-java>=0.23.0",
  "tree-sitter-go>=0.23.0",
  "pyyaml>=6.0",
  # tomllib is part of the standard library on 3.11+; fall back to tomli on 3.10.
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "jsonschema>=4.0.0"]

[project.urls]
Homepage = "https://github.com/pqc-scan/pqc-scan"
Repository = "https://github.com/pqc-scan/pqc-scan"

[project.scripts]
pqc-scan = "pqcscan.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pqcscan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
